--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class="primary-header">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#"><img src="img/logo.svg" alt="Manage"></a>
+            <a href="#"><img src="img/logo.png" alt="Manage" width="68%"></a>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
               <img class="icon-hamburger" src="img/icon-hamburger.svg" alt="" aria-hidden="true">
               <img class="icon-close" src="img/icon-close.svg" alt="" aria-hidden="true">
@@ -51,11 +51,10 @@
             </button>
             <nav class="primary-navigation" id="primary-navigation">
               <ul aria-label="Primary" role="list" class="nav-list">
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Product</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Community</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Writings</a></li>
+                <li><a href="#">Personal</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
             </nav>
             <button class="button | display-sm-none display-md-inline-flex">Get CV</button>
