--- a/index.html
+++ b/index.html
@@ -41,26 +41,42 @@
 
   <body>
     <header class="primary-header">
-        <div class="container">
-          <div class="nav-wrapper">
-            <a href="#"><img src="img/logo.png" alt="Manage" width="68%"></a>
-            <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-              <img class="icon-hamburger" src="img/icon-hamburger.svg" alt="" aria-hidden="true">
-              <img class="icon-close" src="img/icon-close.svg" alt="" aria-hidden="true">
-              <span class="visually-hidden">Menu</span>
-            </button>
-            <nav class="primary-navigation" id="primary-navigation">
-              <ul aria-label="Primary" role="list" class="nav-list">
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Writings</a></li>
-                <li><a href="#">Personal</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </nav>
-            <button class="button | display-sm-none display-md-inline-flex">Get CV</button>
-          </div>
+      <div class="container">
+        <div class="nav-wrapper">
+          <a href="#"><img src="img/logo.png" alt="Manage" width="68%" /></a>
+          <button
+            class="mobile-nav-toggle"
+            aria-controls="primary-navigation"
+            aria-expanded="false"
+          >
+            <img
+              class="icon-hamburger"
+              src="img/icon-hamburger.svg"
+              alt=""
+              aria-hidden="true"
+            />
+            <img
+              class="icon-close"
+              src="img/icon-close.svg"
+              alt=""
+              aria-hidden="true"
+            />
+            <span class="visually-hidden">Menu</span>
+          </button>
+          <nav class="primary-navigation" id="primary-navigation">
+            <ul aria-label="Primary" role="list" class="nav-list">
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Writings</a></li>
+              <li><a href="#">Personal</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+          <button class="button | display-sm-none display-md-inline-flex">
+            Get CV
+          </button>
         </div>
-      </header>
+      </div>
+    </header>
 
     <main>
       <section class="padding-block-900">
@@ -68,17 +84,22 @@
           <div class="even-columns">
             <div>
               <h1 class="fs-primary-heading fw-bold">
-                Android Engineer turned Egineering Manager
+                Engineering Manager & Android Developer
               </h1>
               <p>
-                14 years of experience working in the IT industry across
-                Banking, Insurance, SaaS etc...
+                I have passionate about supporting product development teams to
+                deliver quality, sustainably.
               </p>
             </div>
 
-            <div>
+            <div class="container">
               <a href="#">
-                <img src="img/headshot.JPG" alt="Manage" width="30%" />
+                <img
+                  class="headshot-img"
+                  src="img/headshot.JPG"
+                  alt="Manage"
+                  width="40%"
+                />
               </a>
             </div>
           </div>
@@ -89,25 +110,38 @@
         <div class="container">
           <div class="even-columns">
             <div>
-              <h2 class="fs-secondary-heading fw-bold">My summary:</h2>
+              <h2 class="fs-secondary-heading fw-bold">Experience:</h2>
               <p>
-                14 years of experience working in the IT industry across
-                Banking, Insurance, SaaS etc...
+                Engineering leader with 8+ years of hands-on technical
+                experience and 5+ years of management and leadership experience.
+                At Deloitte Digital I led cross-functional teams, and
+                collaborated across disciplines and domains to design, build and
+                operate award-winning digital products with massive scale for
+                household names in UK & EU consumer banking.
+              </p>
+              <p>
+                My most recent role with Argyle (Remote 1st, Series-B, SaaS
+                product) saw me leading the team responsible for building and
+                maintaining Argyle's mobile SDK across Android, iOS, React and
+                Flutter, as well as the supporting backend systems. Our stack
+                included Django, Spring, Java, Postgres, Kafka all running on
+                GCP.
               </p>
             </div>
-            <div>
+            <div class="container">
+              <h2 class="fs-secondary-heading fw-bold">Expertise</h2>
               <ul class="value-items" role="list">
                 <li>
-                  <h3 class="fs-600 fw-bold">Track company-wide progress</h3>
-                  <p>
-                    See how your day-to-day tasks fit into the wider vision. Go
-                    from tracking progress at the milestone level all the way
-                    done to the smallest of details. Never lose sight of the
-                    bigger picture again.
-                  </p>
+                  <h3 class="fs-600 fw-bold">Software Development</h3>
+                  <ul>
+                    <li>Service Architecture</li>
+                    <li>Native Mobile Development</li>
+                    <li>Java & Spring Boot</li>
+                    <li>Java</li>
+                  </ul>
                 </li>
                 <li>
-                  <h3 class="fs-600 fw-bold">Advanced built-in reports</h3>
+                  <h3 class="fs-600 fw-bold">Leadership</h3>
                   <p>
                     Set internal delivery estimates and track progress toward
                     company goals. Our customisable dashboard helps you build
@@ -115,9 +149,7 @@
                   </p>
                 </li>
                 <li>
-                  <h3 class="fs-600 fw-bold">
-                    Everything you need in one place
-                  </h3>
+                  <h3 class="fs-600 fw-bold">Project Management</h3>
                   <p>
                     Stop jumping from one service to another to communicate,
                     store files, track tasks and share documents. Manage offers
@@ -190,6 +222,5 @@
     </main>
 
     <script type="module" src="js/main.js"></script>
-
   </body>
 </html>
