Added CV download

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           </nav>
           <button class="button | display-sm-none display-md-inline-flex">
             Get CV
+            <a href="docs/cv.pdf" download="Adrian-Estran-CV">Download the pdf</a>
           </button>
         </div>
       </div>
@@ -137,24 +138,26 @@
                     <li>Service Architecture</li>
                     <li>Native Mobile Development</li>
                     <li>Java & Spring Boot</li>
-                    <li>Java</li>
+                    <li>REST API Design</li>
                   </ul>
                 </li>
                 <li>
                   <h3 class="fs-600 fw-bold">Leadership</h3>
-                  <p>
-                    Set internal delivery estimates and track progress toward
-                    company goals. Our customisable dashboard helps you build
-                    out the reports you need to keep key stakeholders informed.
-                  </p>
+                  <ul>
+                    <li>Service Architecture</li>
+                    <li>Native Mobile Development</li>
+                    <li>Java & Spring Boot</li>
+                    <li>REST API Design</li>
+                  </ul>
                 </li>
                 <li>
                   <h3 class="fs-600 fw-bold">Project Management</h3>
-                  <p>
-                    Stop jumping from one service to another to communicate,
-                    store files, track tasks and share documents. Manage offers
-                    an all-in-one team productivity solution.
-                  </p>
+                  <ul>
+                    <li>Process Definition</li>
+                    <li>Cross-team coordination</li>
+                    <li>Vendor coordination</li>
+                    <li>Reporting</li>
+                  </ul>
                 </li>
               </ul>
             </div>
