Copy update for CV button

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
             </ul>
           </nav>
           <button class="button | display-sm-none display-md-inline-flex">
-            Get CV
-            <a href="docs/cv.pdf" download="Adrian-Estran-CV">Download the pdf</a>
+            <a class="cv-button" href="docs/cv.pdf" target="_blank">View my CV</a>
           </button>
         </div>
       </div>
