--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
 
     <main>
       <section class="padding-block-900">
-        <div class="container">
+        <div class="container | block-flow">
           <div class="even-columns">
             <div>
               <h1 class="fs-primary-heading fw-bold">
                 Engineering Manager & Android Developer
               </h1>
               <p>
-                I have passionate about supporting product development teams to
-                deliver quality, sustainably.
+                I am passionate about supporting development teams to
+                deliver great products with a strong focus on sustainability and predictablity
               </p>
             </div>
 
@@ -109,7 +109,7 @@
       <section class="padding-block-700">
         <div class="container">
           <div class="even-columns">
-            <div>
+            <div class="block-flow">
               <h2 class="fs-secondary-heading fw-bold">Experience:</h2>
               <p>
                 Engineering leader with 8+ years of hands-on technical
@@ -128,35 +128,30 @@
                 GCP.
               </p>
             </div>
-            <div class="container">
-              <h2 class="fs-secondary-heading fw-bold">Expertise</h2>
-              <ul class="value-items" role="list">
+            <div class="block-flow" id="expertise-content">
+              <h2 class="fs-secondary-heading fw-bold">Values</h2>
+              <ul class="numbered-items | flow" role="list">
                 <li>
-                  <h3 class="fs-600 fw-bold">Software Development</h3>
-                  <ul>
-                    <li>Service Architecture</li>
-                    <li>Native Mobile Development</li>
-                    <li>Java & Spring Boot</li>
-                    <li>REST API Design</li>
-                  </ul>
+                  <div class="flow" style="--flow-spacer: 1em">
+                    <h3 class="fs-600 fw-bold">Trust</h3>
+                    <p data-width="wide">In the same way that modern societies are built on trust and social cohesion, I believe in the idea that the bedrock of any truly effective team is trust and transparency.</p>
+                  </div>
                 </li>
                 <li>
-                  <h3 class="fs-600 fw-bold">Leadership</h3>
-                  <ul>
-                    <li>Service Architecture</li>
-                    <li>Native Mobile Development</li>
-                    <li>Java & Spring Boot</li>
-                    <li>REST API Design</li>
-                  </ul>
+                  <div class="flow" style="--flow-spacer: 1em">
+                    <h3 class="fs-600 fw-bold">Sustainability</h3>
+                    <p data-width="wide">I also believe in DDD (data driven delivery) and the idea that teams are happier when they deliver value frequently, and at a sustainable cadence. I have seen both of these things achieved through managing flow, capturing metrics and forecasting.</p>
+  
+                  </div>
                 </li>
                 <li>
-                  <h3 class="fs-600 fw-bold">Project Management</h3>
-                  <ul>
-                    <li>Process Definition</li>
-                    <li>Cross-team coordination</li>
-                    <li>Vendor coordination</li>
-                    <li>Reporting</li>
-                  </ul>
+                  <div class="flow" style="--flow-spacer: 1em">
+                    <h3 class="fs-600 fw-bold">Ownership</h3>
+                    <p data-width="wide">I believe that teams should be given clear objectives and goals, and then be empowered to own how they will realise the end product.</p>
+  
+                  </div>
+                </li>
+              </ul>
                 </li>
               </ul>
             </div>
