--- a/index.html
+++ b/index.html
@@ -184,12 +184,16 @@
         </div>
       </section>
 
-      <section class="contact-section padding-block-700">
+      <section class="cta | padding-block-700 bg-accent-400 text-neutral-100">
         <div class="container">
-          <h2 class="fs-secondary-heading">Contact Me</h2>
-          <!-- Cntact -->
-          <p>Add contact section here</p>
-          <button class="button">Contact Button</button>
+          <div class="even-columns | vertican-align-center">
+            <div>
+              <p class="fs-secondary-heading fw-bold">Because no portfolio would be complete without a contact area...</p>
+            </div>
+            <div class="justify-self-end-md">
+              <button class="button" data-type="inverted">Contact</button>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -197,21 +201,14 @@
         <div class="container">
           <div class="even-columns">
             <div>
-              <a href="#"
-                ><img src="img/logo_transparent.png" alt="Manage" width="20%"
-              /></a>
               <ul role="list" aria-label="Social links">
-                <li><a aria-label="linked-in" href="#"></a></li>
-                <li><a aria-label="github" href="#"></a></li>
-                <li><a aria-label="instagram" href="#"></a></li>
+                <li><a aria-label="linkedin" href="#"></a>LinkedIn</li>
+                <li><a aria-label="github" href="#"></a>Github</li>
+                <li><a aria-label="instagram" href="#"></a>Instagram</li>
               </ul>
             </div>
             <div>
-              <form action="">
-                <input type="email" />
-                <button class="button">Go</button>
                 <p>Created by Adrian Estran</p>
-              </form>
             </div>
           </div>
         </div>
