--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -224,8 +226,14 @@
       <section class="writings-section padding-block-700">
         <div class="container">
           <h2 class="fs-secondary-heading">Writings</h2>
-          <!-- Writings -->
-          <p>Add blog section here</p>
+          <ul>
+            {% for post in site.posts %}
+              <li>
+                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                {{ post.excerpt }}
+              </li>
+            {% endfor %}
+          </ul>
           <button class="button">View all writings</button>
         </div>
       </section>
