Continue re-structuring to follow Jekyll guidelines

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Adrian Estran's personal site
             <a href="#">
               <img
                 class="headshot-img"
-                src="img/headshot.JPG"
+                src="assets/images/headshot.JPG"
                 alt="Manage"
                 width="40%"
               />
@@ -88,7 +88,7 @@ title: Adrian Estran's personal site
       <!-- Carousel here -->
       <ul class="slider">
         <li>
-          <img src="img/metro-logo.png" alt="">
+          <img src="assets/images/metro-logo.png" alt="">
 
           <div class="slider-content | flow" style="--flow-spacer: 1rem">
             <h3 class="fw-bold">Metro Bank</h3>
@@ -99,7 +99,7 @@ title: Adrian Estran's personal site
           </div>
         </li>
         <li>
-          <img src="img/clydesdale-logo.jpeg" alt="">
+          <img src="assets/images/clydesdale-logo.jpeg" alt="">
 
           <div class="slider-content | flow" style="--flow-spacer: 1rem">
             <h3 class="fw-bold">Clysdale Bank</h3>
@@ -110,7 +110,7 @@ title: Adrian Estran's personal site
           </div>
         </li>
         <li>
-          <img src="img/raiffeisen-logo.png" alt="">
+          <img src="assets/images/raiffeisen-logo.png" alt="">
 
           <div class="slider-content | flow" style="--flow-spacer: 1rem">
             <h3 class="fw-bold">Raiffeisen Bank</h3>
@@ -121,7 +121,7 @@ title: Adrian Estran's personal site
           </div>
         </li>
         <li>
-          <img src="img/argyle-logo.png" alt="">
+          <img src="assets/images/argyle-logo.png" alt="">
 
           <div class="slider-content | flow" style="--flow-spacer: 1rem">
             <h3 class="fw-bold">Argyle</h3>
@@ -151,5 +151,3 @@ title: Adrian Estran's personal site
 
     
   </main>
-
-  <script type="module" src="js/main.js"></script>
